# python-capnproto

./: .gitignore  setup.cfg  setup.py
py/capnproto_tests/: recursive.capnp  recursive_capnp.rs  test_simple.py
rs/: Cargo.toml
rs/src/: arena.rs  lib.rs  message.rs  objs.rs
